overflow fix #1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -577,6 +577,10 @@ body {
   }
 }
 
+.main__inner {
+  overflow-x: hidden;
+}
+
 .steps {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -637,6 +641,7 @@ body {
   width: 100%;
   max-width: 336px;
   height: 350px;
+  overflow-x: hidden;
 }
 
 .calculator:before {
@@ -674,6 +679,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow-x: hidden;
 }
 
 .calc-form__btn {
