--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,7 +1,9 @@
-// .main {
+.main {
 
-//     // &__inner {}
-// }
+    &__inner {
+        overflow-x: hidden;
+    }
+}
 
 
 
@@ -76,6 +78,7 @@
     width: 100%;
     max-width: 336px;
     height: 350px;
+    overflow-x: hidden;
 
     &:before {
         content: '';
@@ -109,6 +112,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
     // position: relative;
 
     &__btn {
